--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ python:
   - "3.5"
   - "3.6"
 # command to install dependencies
-install: 
-  - "python setup.py -q install"
+install:
+  - "pip install git+https://github.com/fkie-cad/common_helper_files.git"
+  - "pip install ."
   - "pip install pytest-pep8 pytest-cov codecov"
 # command to run tests
 script: "pytest --cov-config .coveragerc --cov=./"
