--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
 install:
   - "pip install git+https://github.com/fkie-cad/common_helper_files.git"
   - "pip install ."
+  - "pip install pytest>=3.6"
   - "pip install pytest-pep8 pytest-cov codecov"
 # command to run tests
 script: "pytest --cov-config .coveragerc --cov=./"
